added system messages handling

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <canvas id="canvas"></canvas>
+    <button onclick="toggleSystemMessages()">Toggle System Messages</button>
+    <div id="systemMessages"></div>
   </body>
   <script src="/static/game.js"></script>
 </html>
